--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "latest",
-    "vue": "^2.5.22"
+    "express": "^4.17.1",
+    "vue": "^2.5.22",
+    "youtube-dl": "^2.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.6.0",
