--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "latest",
     "express": "^4.17.1",
     "vue": "^2.5.22",
+    "vue-button-spinner": "^2.2.1",
     "youtube-dl": "^2.0.1"
   },
   "devDependencies": {
